fixed button alignment.

--- a/src/components/Baskets/Baskets.module.css
+++ b/src/components/Baskets/Baskets.module.css
@@ -1,3 +1,7 @@
 .cardContainer {
     padding-top: 2%;
 }
+
+.buttonSpacing {
+    justify-content: space-evenly;
+}
